# rem

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: ci.yml
src/rem/: __init__.py  constants.py
src/rem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rem/cli/: local.py  main.py  run.py
src/rem/core/: config.py  config_validation.py  experiment.py  manifest.py  registry.py  runner.py  stamp.py  status.py  sweeps.py
src/rem/utils/: lock.py  logger.py  paths.py  ulid.py
tests/: conftest.py  test_dummy.py  test_logger.py
tests/cli/: test_cli_main.py  test_cli_run.py
tests/core/: test_config.py  test_config_validation.py  test_experiment.py  test_manifest.py  test_registry.py  test_runner.py  test_stamp.py  test_status.py  test_sweeps.py
tests/data/: base.yaml  dummy_experiment.py  invalid.yaml  override.yaml
tests/data/configs/: base_minimal.yaml  base_minimal_pathspec.yaml  flat_grid.yaml  invalid_reserved_key.yaml  invalid_structure.yaml  nested_grid.yaml  nested_grid_zip.yaml  test_flag.yaml  zip.yaml
tests/data/experiments/dummy_exp/: dummy.py
tests/data/experiments/erroring_exp/: erroring_dummy.py
tests/utils/: test_lock.py  test_paths.py  test_ulid.py
