[project]
name = "rem"
version = "0.1.0"
description = "Research-grade experiment manager"
authors = [
    { name="Ravin Raj", email="ravinraj@princeton.edu" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "ulid-py>=1.1,<2.0",
    "filelock>=3.13",
]

[project.urls]
Homepage = "https://github.com/killthekernel/rem"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort",
    "pre-commit"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["src/rem"]
